@@ -12,22 +12,21 @@ import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
 import java.io.IOException;
-import java.util.Arrays;
-import java.util.Iterator;
+import java.util.*;
 
 public final class Knapsack {
 
     public static class KnapsackProblem implements Problem<Integer> {
-        final int     capa;
-        final int[]   profit;
-        final int[]   weight;
+        final int capa;
+        final int[] profit;
+        final int[] weight;
         public final Integer optimal;
 
         public KnapsackProblem(final int capa, final int[] profit, final int[] weight, final Integer optimal) {
-            this.capa   = capa;
+            this.capa = capa;
             this.profit = profit;
-            this.weight = weight; 
-            this.optimal= optimal;
+            this.weight = weight;
+            this.optimal = optimal;
         }
 
         @Override
@@ -50,7 +49,7 @@ public final class Knapsack {
             if (state >= weight[var]) {
                 return Arrays.asList(1, 0).iterator();
             } else {
-                return Arrays.asList(0).iterator();
+                return List.of(0).iterator();
             }
         }
 
@@ -70,12 +69,19 @@ public final class Knapsack {
     }
 
     public static class KnapsackRelax implements Relaxation<Integer> {
+
+        private final KnapsackProblem problem;
+
+        public KnapsackRelax(KnapsackProblem problem) {
+            this.problem = problem;
+        }
+
         @Override
         public Integer mergeStates(final Iterator<Integer> states) {
             int capa = 0;
             while (states.hasNext()) {
                 final Integer state = states.next();
-                capa  = Math.max(capa,  state);
+                capa = Math.max(capa, state);
             }
             return capa;
         }
@@ -83,6 +89,42 @@ public final class Knapsack {
         @Override
         public int relaxEdge(Integer from, Integer to, Integer merged, Decision d, int cost) {
             return cost;
+        }
+
+
+        @Override
+        public int fastUpperBound(Integer state, Set<Integer> variables) {
+            double[] ratio = new double[problem.nbVars()];
+            int capacity = state;
+            for (int v : variables) {
+                ratio[v] = ((double) capacity / problem.weight[v]);
+            }
+
+            class RatioComparator implements Comparator<Integer> {
+                @Override
+                public int compare(Integer o1, Integer o2) {
+                    return Double.compare(ratio[o1], ratio[o2]);
+                }
+            }
+
+            Integer[] sorted = variables.toArray(new Integer[0]);
+            Arrays.sort(sorted, new RatioComparator().reversed());
+
+            int maxProfit = 0;
+            Iterator<Integer> itemIterator = Arrays.stream(sorted).iterator();
+            while (capacity > 0 && itemIterator.hasNext()) {
+                int item = itemIterator.next();
+                if (capacity >= problem.weight[item]) {
+                    maxProfit += problem.profit[item];
+                    capacity -= problem.weight[item];
+                } else {
+                    double itemProfit = ratio[item] * problem.profit[item];
+                    maxProfit += (int) Math.floor(itemProfit);
+                    capacity = 0;
+                }
+            }
+
+            return maxProfit;
         }
     }
 
@@ -95,29 +137,29 @@ public final class Knapsack {
 
     public static KnapsackProblem readInstance(final String fname) throws IOException {
         final File f = new File(fname);
-        try(final BufferedReader bf = new BufferedReader(new FileReader(f))) {
+        try (final BufferedReader bf = new BufferedReader(new FileReader(f))) {
             final PinReadContext context = new PinReadContext();
 
             bf.lines().forEachOrdered((String s) -> {
                 if (context.isFirst) {
                     context.isFirst = false;
                     String[] tokens = s.split("\\s");
-                    context.n    = Integer.parseInt(tokens[0]);
+                    context.n = Integer.parseInt(tokens[0]);
                     context.capa = Integer.parseInt(tokens[1]);
 
                     if (tokens.length == 3) {
                         context.optimal = Integer.parseInt(tokens[2]);
                     }
 
-                    context.profit= new int[context.n];
-                    context.weight= new int[context.n];
+                    context.profit = new int[context.n];
+                    context.weight = new int[context.n];
                 } else {
                     if (context.count < context.n) {
                         String[] tokens = s.split("\\s");
                         context.profit[context.count] = Integer.parseInt(tokens[0]);
                         context.weight[context.count] = Integer.parseInt(tokens[1]);
 
-                        context.count ++;
+                        context.count++;
                     }
                 }
             });
@@ -138,21 +180,21 @@ public final class Knapsack {
 
     public static void main(final String[] args) throws IOException {
         final String instance = "data/Knapsack/instance_n100_c500_10_5_10_5_0";
-        final KnapsackProblem                problem = readInstance(instance);
-        final KnapsackRelax                    relax = new KnapsackRelax();
-        final KnapsackRanking                ranking = new KnapsackRanking();
+        final KnapsackProblem problem = readInstance(instance);
+        final KnapsackRelax relax = new KnapsackRelax(problem);
+        final KnapsackRanking ranking = new KnapsackRanking();
         final FixedWidth<Integer> width = new FixedWidth<>(250);
-        final VariableHeuristic<Integer> varh = new DefaultVariableHeuristic();
+        final VariableHeuristic<Integer> varh = new DefaultVariableHeuristic<Integer>();
 
 
         final Frontier<Integer> frontier = new SimpleFrontier<>(ranking);
         final Solver solver = new ParallelSolver<Integer>(
                 Runtime.getRuntime().availableProcessors(),
-                problem, 
-                relax, 
-                varh, 
-                ranking, 
-                width, 
+                problem,
+                relax,
+                varh,
+                ranking,
+                width,
                 frontier);
 
 
@@ -161,18 +203,16 @@ public final class Knapsack {
         double duration = (System.currentTimeMillis() - start) / 1000.0;
 
 
-        int[] solution = solver.bestSolution()
-            .map(decisions -> {
-                int[] values = new int[problem.nbVars()];
-                for (Decision d : decisions) {
-                    values[d.var()] = d.val();
-                }
-                return values;
-            })
-            .get();
-        
-        System.out.println(String.format("Duration : %.3f", duration));
-        System.out.println(String.format("Objective: %d", solver.bestValue().get()));
-        System.out.println(String.format("Solution : %s", Arrays.toString(solution)));
+        int[] solution = solver.bestSolution().map(decisions -> {
+            int[] values = new int[problem.nbVars()];
+            for (Decision d : decisions) {
+                values[d.var()] = d.val();
+            }
+            return values;
+        }).get();
+
+        System.out.printf("Duration : %.3f seconds%n", duration);
+        System.out.printf("Objective: %d%n", solver.bestValue().get());
+        System.out.printf("Solution : %s%n", Arrays.toString(solution));
     }
 }
